objects/maps__Analytic__c.object
<CustomObject>
    <fields>
        <fullName>maps__DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__FavoriteLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Favorite Location</label>
        <referenceTo>maps__Location__c</referenceTo>
        <relationshipLabel>Maps Analytics</relationshipLabel>
        <relationshipName>Maps_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerName__c</fullName>
        <formula>IF(NOT(ISBLANK(maps__FavoriteLocation__c)), maps__FavoriteLocation__r.Name,
     IF(NOT(ISBLANK( maps__MapsLayer__c )), maps__MapsLayer__r.Name, 
          IF(NOT(ISBLANK( maps__SavedQuery__c )), maps__SavedQuery__r.Name,
               IF(NOT(ISBLANK( maps__ShapeLayer__c )),  maps__ShapeLayer__r.Name,
                    &apos;Unknown&apos;
               )
          )
     ) 
)</formula>
        <label>Layer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapsLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Layer</label>
        <referenceTo>maps__Layer__c</referenceTo>
        <relationshipLabel>Maps Analytics</relationshipLabel>
        <relationshipName>Maps_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__SavedQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved Query</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Maps Analytics</relationshipLabel>
        <relationshipName>Maps_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Analytics</relationshipLabel>
        <relationshipName>Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marker Layer</fullName>
                </value>
                <value>
                    <fullName>Shape Layer</fullName>
                </value>
                <value>
                    <fullName>Data Layer</fullName>
                </value>
                <value>
                    <fullName>Favorite Location</fullName>
                </value>
                <value>
                    <fullName>ArcGIS Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plot Layer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maps_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Analytic</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>maps__SavedQuery__c</columns>
        <columns>maps__MapsLayer__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Maps Analytic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>